# sl_client_demo

./: README.md  pyproject.toml
cs_ui_crew/: app_crew2.py  client_app.py  curl_tests.md  serve_agent.py
stdout_crew/: app_crew.py  main.py
